# ai-research-paper-applications

./: .gitignore  KNOWLEDGE_BASE_SUMMARY.md  ORCHESTRATOR_PROMPT.md  README.md  RESTART_VERIFIED.md  SESSION_RECOVERY.md  pyproject.toml  requirements.txt
Papers/agent-systems/SkillOpt/: README.md  README_SkillOpt.md  SUMMARY_SkillOpt.md  SkillOpt_Complete_Package_README.md  SkillOpt_Executive_OnePager.md  SkillOpt_Implementation_Guide.md  SkillOpt_OnePager.html  SkillOpt_Repository_Investigation_Report.md  SkillOpt_Tutorial.ipynb  (+2 more)
knowledge-graph/: INDEX.md  VISUALIZATION.md
knowledge-graph/concepts/: INDEX.md
knowledge-graph/patterns/: INDEX.md
knowledge-graph/techniques/: INDEX.md
output/onepagers/: 2605_01172v1_a_theory_of_generalization_in_deep_learning.html  2605_23904v2_skillopt_self_evolving_agent_skills.html
output/summaries/: 2605_01172v1_a_theory_of_generalization_in_deep_learning.md  2605_23904v2_skillopt_self_evolving_agent_skills.md
output/wiki/: concepts.md  cross_references.md  glossary.md  index.md  paper_generalization.md  paper_skillopt.md  practical_applications.md
src/: __init__.py
src/analysis/: __init__.py  html_onepager.py
src/extraction/: __init__.py  code_extractor.py  image_extractor.py  metadata_extractor.py  models.py  pipeline.py  reference_extractor.py  table_extractor.py  text_extractor.py
src/streamlit_app/: app.py  utils.py
src/wiki/: __init__.py  builder.py
templates/: concept_template.md  pattern_template.md  technique_template.md
tests/: test_extraction.py
tools/: README.md  new_paper.py  requirements.txt
(+26 files in other folders)
